[gd_scene load_steps=53 format=3 uid="uid://b0cnxefxej1jl"]

[ext_resource type="Script" path="res://scripts/enemies/queenbee/QueenBee.gd" id="1_hl85j"]
[ext_resource type="FontFile" uid="uid://cbclwdapxhy4i" path="res://components/UI/mitochondria.ttf" id="2_4vayg"]
[ext_resource type="Texture2D" uid="uid://dki8pjvntf2ji" path="res://art/enemies/queen_bee/diagonal flying.png" id="2_d1scn"]
[ext_resource type="Script" path="res://scripts/util/health.gd" id="2_kllia"]
[ext_resource type="Texture2D" uid="uid://ddkcxm1vmn2fm" path="res://art/enemies/queen_bee/diagonal sting.png" id="3_p1t1f"]
[ext_resource type="Texture2D" uid="uid://b8yxqtxafybot" path="res://art/enemies/queen_bee/diagonal stomp.png" id="4_mtmch"]
[ext_resource type="Texture2D" uid="uid://de7pblx8nm17b" path="res://art/enemies/queen_bee/diagonal takeoff.png" id="5_3a77u"]
[ext_resource type="Script" path="res://scripts/util/hurtbox.gd" id="7_h4tar"]
[ext_resource type="Script" path="res://scripts/util/hitbox.gd" id="8_natyv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8mclj"]
bg_color = Color(0.147672, 0.147672, 0.147672, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gfaer"]
bg_color = Color(0.905882, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="BoxShape3D" id="BoxShape3D_sdk41"]
size = Vector3(1, 2.1, 1.9)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eukq"]
atlas = ExtResource("2_d1scn")
region = Rect2(0, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1pox"]
atlas = ExtResource("2_d1scn")
region = Rect2(1280, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_evsbt"]
atlas = ExtResource("2_d1scn")
region = Rect2(2560, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l4tx"]
atlas = ExtResource("2_d1scn")
region = Rect2(3840, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_taday"]
atlas = ExtResource("3_p1t1f")
region = Rect2(0, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_no2ns"]
atlas = ExtResource("3_p1t1f")
region = Rect2(1280, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_kplri"]
atlas = ExtResource("3_p1t1f")
region = Rect2(2560, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_iplhc"]
atlas = ExtResource("3_p1t1f")
region = Rect2(3840, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_r74hy"]
atlas = ExtResource("3_p1t1f")
region = Rect2(5120, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8do1"]
atlas = ExtResource("3_p1t1f")
region = Rect2(6400, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1k2c"]
atlas = ExtResource("3_p1t1f")
region = Rect2(7680, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4khg"]
atlas = ExtResource("3_p1t1f")
region = Rect2(8960, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv1ky"]
atlas = ExtResource("4_mtmch")
region = Rect2(0, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc14l"]
atlas = ExtResource("4_mtmch")
region = Rect2(1280, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3g8t"]
atlas = ExtResource("4_mtmch")
region = Rect2(2560, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbqu0"]
atlas = ExtResource("4_mtmch")
region = Rect2(3840, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuty"]
atlas = ExtResource("4_mtmch")
region = Rect2(5120, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw4bh"]
atlas = ExtResource("4_mtmch")
region = Rect2(6400, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbat8"]
atlas = ExtResource("4_mtmch")
region = Rect2(7680, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d2n6"]
atlas = ExtResource("4_mtmch")
region = Rect2(8960, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7o6w"]
atlas = ExtResource("4_mtmch")
region = Rect2(10240, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuf7r"]
atlas = ExtResource("4_mtmch")
region = Rect2(11520, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tf4l"]
atlas = ExtResource("5_3a77u")
region = Rect2(0, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpbvg"]
atlas = ExtResource("5_3a77u")
region = Rect2(1280, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_cutc3"]
atlas = ExtResource("5_3a77u")
region = Rect2(2560, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ltg"]
atlas = ExtResource("5_3a77u")
region = Rect2(3840, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntho4"]
atlas = ExtResource("5_3a77u")
region = Rect2(5120, 0, 1280, 1280)

[sub_resource type="AtlasTexture" id="AtlasTexture_d57mm"]
atlas = ExtResource("5_3a77u")
region = Rect2(6400, 0, 1280, 1280)

[sub_resource type="SpriteFrames" id="SpriteFrames_dtgpi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eukq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1pox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evsbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l4tx")
}],
"loop": true,
"name": &"flying",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_taday")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no2ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kplri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iplhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r74hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8do1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1k2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4khg")
}],
"loop": false,
"name": &"sting",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv1ky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc14l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3g8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbqu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw4bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbat8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d2n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7o6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuf7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7o6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuf7r")
}],
"loop": false,
"name": &"stomp",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tf4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpbvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cutc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ltg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntho4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d57mm")
}],
"loop": false,
"name": &"takeoff",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_i2xl7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animations:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"sting"]
}

[sub_resource type="Animation" id="Animation_0h140"]
resource_name = "fly"
length = 0.133
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"flying"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_bs7rw"]
resource_name = "sting"
length = 0.2667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"sting"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_f7888"]
resource_name = "stomp"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"stomp"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11]
}

[sub_resource type="Animation" id="Animation_74err"]
resource_name = "takeoff"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"takeoff"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a26qn"]
_data = {
"RESET": SubResource("Animation_i2xl7"),
"fly": SubResource("Animation_0h140"),
"sting": SubResource("Animation_bs7rw"),
"stomp": SubResource("Animation_f7888"),
"takeoff": SubResource("Animation_74err")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_b2ltj"]
height = 3.0
radius = 15.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qgwuc"]
transparency = 1

[sub_resource type="CylinderMesh" id="CylinderMesh_iwk8i"]
material = SubResource("StandardMaterial3D_qgwuc")
top_radius = 15.0
bottom_radius = 15.0
height = 0.001
cap_bottom = false

[sub_resource type="BoxShape3D" id="BoxShape3D_vjldp"]
size = Vector3(2.6, 2.1, 1.9)

[sub_resource type="BoxShape3D" id="BoxShape3D_rd74o"]
size = Vector3(0.9, 1, 1)

[node name="QueenBee" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_hl85j")

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 80.0
offset_bottom = 20.0
grow_horizontal = 2
pivot_offset = Vector2(90, 10)
theme_override_styles/background = SubResource("StyleBoxFlat_8mclj")
theme_override_styles/fill = SubResource("StyleBoxFlat_gfaer")
max_value = 50.0
step = 1.0
show_percentage = false

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.0
offset_top = 19.0
offset_right = 55.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_4vayg")
text = "Queen Bee"
horizontal_alignment = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0.05)
shape = SubResource("BoxShape3D_sdk41")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_kllia")
max_health = 50

[node name="Animations" type="AnimatedSprite3D" parent="."]
unique_name_in_owner = true
pixel_size = 0.002
billboard = 1
sprite_frames = SubResource("SpriteFrames_dtgpi")
animation = &"sting"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a26qn")
}
speed_scale = 0.4

[node name="StingTimer" type="Timer" parent="."]

[node name="StompTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="StunArea" type="Area3D" parent="."]
transform = Transform3D(0.26, 0, 0, 0, 0.26, 0, 0, 0, 0.26, 0, 0, 0)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="StunArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.384615, 0)
shape = SubResource("CylinderShape3D_b2ltj")

[node name="StompIndicator" type="MeshInstance3D" parent="StunArea/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.6, 0)
transparency = 1.0
mesh = SubResource("CylinderMesh_iwk8i")

[node name="HurtBox" type="Area3D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 0
collision_mask = 2
script = ExtResource("7_h4tar")
health = NodePath("../Health")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.78814e-07, 0.15, 0.05)
shape = SubResource("BoxShape3D_vjldp")

[node name="HitBox" type="Area3D" parent="."]
collision_mask = 0
script = ExtResource("8_natyv")
damage = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -0.125, 0, 0)
shape = SubResource("BoxShape3D_rd74o")
disabled = true

[connection signal="health_changed" from="Health" to="." method="_on_health_health_changed"]
[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="StingTimer" to="." method="_on_sting_timer_timeout"]
[connection signal="timeout" from="StompTimer" to="." method="_on_stomp_timer_timeout"]
[connection signal="body_entered" from="StunArea" to="." method="_on_stun_area_body_entered"]
